--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/mystyle.css">
 </head>
 
-<body onload="getRestuantData()">
+<body onload="getAllRes()">
   <nav class="topNaviBar">
     <ul>
       <li><a href="#">Home</a></li>
@@ -21,18 +21,26 @@
       <button type="submit">Search</button>
     </form>
   </nav>
-  <h1>This is a sample website with a navigation bar containing a search bar.</h1>
+  <!-- This is the container that holds the initial message, heading, and movies -->
   <div class="container">
+    <!-- The message will be shown when the page loads and will
+    disappear after the movies are loaded -->
     <div class="row" id="parent">
-      Retriving from database
+        Retrieving movies from database... Please wait...<br><br>
+        If you are seeing this message for a long time, it is likely
+        that you have a JavaScript error. Troubleshoot your script by
+        using the browser console panel now. Please use either Firefox
+        or Chrome to render this webpage.
     </div>
+    <p>
+        <!-- This is the heading showing how many movies are there -->
     <h3 id="summary"></h3>
+    </p>
     <div id="resTable" class="row"></div>
-  </div>
+  </div>  
   <!-- Include the movies modal here -->
-  <div w3-include-html="movies-modal.html"></div>
+  <div w3-include-html="resPage.html"></div>
   <!-- Include the comments modal here -->
-  <div w3-include-html="comments-modal.html"></div>
   <!-- Include the new comments modal here -->
   <div w3-include-html="new-comments-modal.html"></div>
   <!-- Include the edit comments modal here -->
@@ -40,8 +48,6 @@
   <!-- Include the message modal here -->
   <div w3-include-html="message-modal.html"></div>
   <br><br>
-  <!-- Include the footer here -->
-  <div w3-include-html="footer.html"></div>
   <script src="https://www.w3schools.com/lib/w3.js"></script>
   <script>
       //to bring in other HTML on the fly into this page
