--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       <li><a href="#">Home</a></li>
       <li><a href="#">Restaurants</a></li>
       <li><a href="#">Categories</a></li>
-      <li><a href="#">Login | Signup</a></li>
+      <li><a href="ResPage.html">Login | Signup</a></li>
     </ul>
     <form>
       <input type="text" placeholder="Search...">
