--- a/public/index.html
+++ b/public/index.html
@@ -32,21 +32,16 @@
         using the browser console panel now. Please use either Firefox
         or Chrome to render this webpage.
     </div>
-    <p>
-        <!-- This is the heading showing how many movies are there -->
+    <h3>On going promotions</h3>
+    <div id="carousel">
+      <img src="Images/Icons/Group 5.jpg" alt="image 1">
+      <img src="Images/Icons/Screenshot_20230128_042224.png" alt="image 2">
+      <img src="Images/Icons/Screenshot_20230128_042300.png" alt="image 3">
+    </div>
+
     <h3 id="summary"></h3>
-    </p>
+    
     <div id="resTable" class="row"></div>
-  </div>  
-  <!-- Include the movies modal here -->
-  <div w3-include-html="resPage.html"></div>
-  <!-- Include the comments modal here -->
-  <!-- Include the new comments modal here -->
-  <div w3-include-html="new-comments-modal.html"></div>
-  <!-- Include the edit comments modal here -->
-  <div w3-include-html="edit-comments-modal.html"></div>
-  <!-- Include the message modal here -->
-  <div w3-include-html="message-modal.html"></div>
   <br><br>
   <script src="https://www.w3schools.com/lib/w3.js"></script>
   <script>
@@ -59,7 +54,7 @@
   <script src="JS/app.js"></script>
   <script src="JS/restuant.js"></script>
   <script src="JS/review.js"></script>
-  
+  <script src="JS/carosel.js"></script>
 </body>
 
 </html>
