--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,12 @@
 
 <body onload="getAllRes()">
   <nav class="topNaviBar">
+    <img src="Images/Icons/Eat in lah.jpg" alt="Logo" id="logo-png">
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Restaurants</a></li>
-      <li><a href="#">Categories</a></li>
-      <li><a href="ResPage.html">Login | Signup</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="index.html">Restaurants</a></li>
+      <li><a href="index.html">Categories</a></li>
+      <li><a href="login.html">Login | Signup</a></li>
     </ul>
     <form>
       <input type="text" placeholder="Search...">
