--- a/public/ResPage.html
+++ b/public/ResPage.html
@@ -13,16 +13,16 @@
         <nav class="topNaviBar">
             <img src="Images/Icons/Eat in lah.jpg" alt="Logo" id="logo-png">
             <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="index.html">Restaurants</a></li>
-              <li><a href="index.html">Categories</a></li>
-              <li><a href="login.html">Login | Signup</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Restaurants</a></li>
+                <li><a href="index.html">Categories</a></li>
+                <li><a href="login.html">Login | Signup</a></li>
             </ul>
             <form>
-              <input type="text" placeholder="Search...">
-              <button type="submit">Search</button>
+                <input type="text" placeholder="Search...">
+                <button type="submit">Search</button>
             </form>
-          </nav>
+        </nav>
     </div>
     <div class="content" style="overflow: auto;">
         <h1 id="resName">Res name</h1>
@@ -48,28 +48,31 @@
 
         <div class="reviewBody">
             <h1>reviews</h1>
-            <a href="#" onclick="newRew()">
-                <img src="Images/Icons/Component 17 – 1.jpg" id="addReview">
-            </a>
+            <button type="button" id="addRev" data-toggle="modal" data-target="#newReviewModal" data-dismiss="modal" onclick="newRev()"></button>
+            <div w3-include-html="new-review-modal.html" class="temphide" id="addrevshow"></div>
             <div id="rewBody">
                 <p>There is no reviews, how about adding your own?</p>
             </div>
         </div>
-    
+        
+        <div></div>
     </div>
 
-
-
-    <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFJ4MLTrB1d-75ZMfJydSi-jtBDUWUuKU&callback=initMap" async
-        defer>
-    </script>
-    <script src="JS/app.js"></script>
-    <script src="JS/restuant.js"></script>
-    <script src="JS/review.js"></script>
 </body>
-
-</html>
-<html>
+<script src="https://www.w3schools.com/lib/w3.js"></script>
+<script>
+    //to bring in other HTML on the fly into this page
+    w3.includeHTML();
+</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<script src="https://kit.fontawesome.com/86ec7c1143.js" ></script>
+<script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFJ4MLTrB1d-75ZMfJydSi-jtBDUWUuKU&callback=initMap" async
+    defer>
+    </script>
+<script src="JS/app.js"></script>
+<script src="JS/restuant.js"></script>
+<script src="JS/review.js"></script>
 
 </html>
