--- a/public/edit-review-modal.html
+++ b/public/edit-review-modal.html
@@ -15,11 +15,11 @@
                         <label for="userComments">Review</label>
                  <textarea id="edituserComments" required class="form-control form-rounded" rows="3" cols="100%"></textarea>
                         <label for="popcorn">Review</label>
-                        <img src="Images/Icons/Polygon -1.jpg" class="editpop" value="1" onmouseover="rateIt(this)" />
-                        <img src="Images/Icons/Polygon -1.jpg" class="editpop" value="2" onmouseover="rateIt(this)" />
-                        <img src="Images/Icons/Polygon -1.jpg" class="editpop" value="3" onmouseover="rateIt(this)" />
-                        <img src="Images/Icons/Polygon -1.jpg" class="editpop" value="4" onmouseover="rateIt(this)" />
-                        <img src="Images/Icons/Polygon -1.jpg" class="editpop" value="5" onmouseover="rateIt(this)" />
+                        <img src="Images/Icons/Polygon -1.jpg" class="editpop" value="1" onclick="rateIt(this)" />
+                        <img src="Images/Icons/Polygon -1.jpg" class="editpop" value="2" onclick="rateIt(this)" />
+                        <img src="Images/Icons/Polygon -1.jpg" class="editpop" value="3" onclick="rateIt(this)" />
+                        <img src="Images/Icons/Polygon -1.jpg" class="editpop" value="4" onclick="rateIt(this)" />
+                        <img src="Images/Icons/Polygon -1.jpg" class="editpop" value="5" onclick="rateIt(this)" />
                     </div>
 
                     <div class="modal-footer">
