--- a/public/new-review-modal.html
+++ b/public/new-review-modal.html
@@ -24,7 +24,7 @@
                     </div>
 
                     <div class="modal-footer">
-  <button type="button" class="btn btn-primary" data-dismiss="modal" id="submitComment" onClick="addComment()">Submit</button>
+  <button type="button" class="btn btn-primary" data-dismiss="modal" id="submitComment" onClick="addRev()">Submit</button>
                         <button type="button" class="btn btn-secondary bg-dark" data-dismiss="modal">Close</button>
                     </div>
                 </form>
