--- a/public/ResPage.html
+++ b/public/ResPage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/resPage.css">
     <title>Eat In Lah</title>
 </head>
@@ -57,6 +58,7 @@
         
         <div></div>
     </div>
+    <div w3-include-html="edit-review-modal.html"></div>
 
 </body>
 <script src="https://www.w3schools.com/lib/w3.js"></script>
