--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
 <body onload="getAllRes()">
   <nav class="topNaviBar">
-    <img src="Images/Icons/Eat in lah.jpg" alt="Logo" id="logo-png">
+    <img src="Images/Icons/Eat_in_lah.jpg" alt="Logo" id="logo-png">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="index.html">Restaurants</a></li>
