--- a/public/login.html
+++ b/public/login.html
@@ -8,15 +8,41 @@
     <link rel="stylesheet" href="CSS/loginpage.css">
 </head>
 <body>
+
+    <div class="navBar">
+        <nav class="topNaviBar">
+            <img src="Images/Icons/Eat_in_lah.jpg" alt="Logo" id="logo-png">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Restaurants</a></li>
+                <li><a href="index.html">Categories</a></li>
+                <li><a href="login.html">Login | Signup</a></li>
+            </ul>
+        </nav>
+    </div>
+
     <form>
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username">
+        <label for="ID">User Id:</label>
+        <input type="text" id="ID" name="ID">
         <br>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password">
         <br>
-        <button type="submit">Login</button>
+        <button type="button" id="loginBtn" onclick="onlogin_clicked()">Login</button>
       </form>
-      
+    
+    <div class="connect_sigup"><a href="signup.html">New user? Click here to Sign Up and register an account</a></div>
 </body>
+<script src="https://www.w3schools.com/lib/w3.js"></script>
+<script>
+    //to bring in other HTML on the fly into this page
+    w3.includeHTML();
+</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<script src="https://kit.fontawesome.com/86ec7c1143.js" ></script>
+<script src="JS/app.js"></script>
+<script src="JS/restuant.js"></script>
+<script src="JS/review.js"></script>
+<script src="JS/users.js"></script>
 </html>
