--- a/public/ResPage.html
+++ b/public/ResPage.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/resPage.css">
     <title>Eat In Lah</title>
 </head>
@@ -12,17 +13,7 @@
 <body onload="getAllRes_Page();getReviews()">
     <div class="navBar">
         <nav class="topNaviBar">
-            <img src="Images/Icons/Eat_in_lah.jpg" alt="Logo" id="logo-png">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">Restaurants</a></li>
-                <li><a href="index.html">Categories</a></li>
-                <li><a href="login.html">Login | Signup</a></li>
-            </ul>
-            <form>
-                <input type="text" placeholder="Search...">
-                <button type="submit">Search</button>
-            </form>
+            <div w3-include-html="nav-bar.html"></div>
         </nav>
     </div>
     <div class="content" style="overflow: auto;">
@@ -59,7 +50,9 @@
         <div></div>
     </div>
     <div w3-include-html="edit-review-modal.html"></div>
-
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 <script src="https://www.w3schools.com/lib/w3.js"></script>
 <script>
@@ -76,5 +69,6 @@
 <script src="JS/app.js"></script>
 <script src="JS/restuant.js"></script>
 <script src="JS/review.js"></script>
+<script src="JS/navbar.js"></script>
 
 </html>
