--- a/public/signup.html
+++ b/public/signup.html
@@ -6,21 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eat In Lah</title>
     <link rel="stylesheet" href="CSS/loginpage.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-
-    <div class="navBar">
-        <nav class="topNaviBar">
-            <img src="Images/Icons/Eat_in_lah.jpg" alt="Logo" id="logo-png">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">Restaurants</a></li>
-                <li><a href="index.html">Categories</a></li>
-                <li><a href="login.html">Login | Signup</a></li>
-            </ul>
-        </nav>
-    </div>
-
+    <nav class="topNaviBar">
+        <div w3-include-html="nav-bar.html"></div>
+    </nav>
     <form>
         <label for="id">User Id:</label>
         <input type="text" id="ID" name="id">
@@ -42,7 +33,10 @@
         <br>
         <button id="signUpBtn" onclick="user_register()">Signup</button>
       </form>
-      <div class="connect_login"><a href="login.html">Have an account? Click here to Login</a></div>
+      <div class="connect_login"><a href="login.html" style="margin-left: 41%;">Have an account? Click here to Login</a></div>
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 <script src="https://www.w3schools.com/lib/w3.js"></script>
 <script>
